Fixed margins on mobile Block 6

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -93,6 +93,7 @@
       float: none;
       display: block;
       margin: 0 auto;
+      left: -10px;
       top: 100px;
     }
   }
